--- a/result.tex
+++ b/result.tex
@@ -788,16 +788,18 @@ In the $X1$ point each unit cell is divided by one nodal plane of the magnetic f
 \FloatBarrier %====================================================================================================
 \section{Dielectric rods parallel to the electric field} \label{sect_diel_rods_el} % references to ->
 \paragraph{} %{{{
-The discussion of the previous structure has shown that the choice of permittivity and geometry obviously leads to a qualitative change in the structure behaviour. This becomes even more important in the case of dielectric rods parallel to the electric field, since such a structure can behave in several different ways. Moreover, not all differences may be directly seen from the PWEM results, as was the case in Fig. \ref{fg_rodh}.  % todo rewrite?
+The discussion of the previous structure has shown that the choice of permittivity and geometry obviously leads to a qualitative change in the structure behaviour. This becomes even more important in the case of dielectric rods parallel to the electric field. 
 
-Fig. \ref{fg_erods_acomparison} shows the spectra of effective parameters for three rod arrays of the same permittivity $\epsrl(f=1\text{1 THz}) = 89.5+0.23\ii$ and diameter $\rho=10$ $\upmu$m. They only differ by the unit cell size $a \in \{80, 95, 120\}$ $\upmu$m.
+Fig. \ref{fg_erods_acomparison} shows the spectra of effective parameters for three rod arrays of the same permittivity $\epsrl(f=1\text{ THz}) = 89.5+0.23\ii$ and diameter $\rho=10$ $\upmu$m. They only differ by the unit cell size $a \in \{80, 95, 120\}$ $\upmu$m, yet such a structure obviously behaves in several different ways depending on $a$. Moreover, not all differences may be directly seen from the PWEM results, as was the case in Fig. \ref{fg_rodh}.  % todo rewrite?
+
 
 % TODO refereence  also to \cite{valdivia2012} and \cite{shi2007}
 %low-loss dielectrics discussed in http://www.nature.com/nnano/journal/v11/n1/full/nnano.2015.304.html??
 %\cite{yang2015}
+Starting with the sparse array with $a=12\rho$, one can clearly identify two individual resonances with familiar impacts on the spectra of $\Neff(f)$. From other parameters, $\eeff(f)$ and $\meff(f)$ 
 
 %}}}
-\begin{figure}[ht]  %{{{ erods_acomparison
+\begin{figure}[h!]  %{{{ erods_acomparison
 	\caption{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for a rod array  $a = 100$ $\mu$m and grid resolution of 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm} 
 %% NOTE: if realistic materials are needed, erods_acomparison-loLoss_r.pdf can be substituted for  erods_acomparison_r.pdf etc.
 \begin{tabular}{r}
